# pointer-src

./: .gitignore  CMakeLists.txt
cmake/: Version.cmake
src/: CMakeLists.txt
src/apps/flutter/: README.md  pubspec.yaml
src/apps/flutter/android/app/: build.gradle
src/apps/flutter/android/app/src/debug/: AndroidManifest.xml
src/apps/flutter/android/app/src/main/: AndroidManifest.xml
src/apps/flutter/android/app/src/main/kotlin/com/example/pointer/: MainActivity.kt
src/apps/flutter/ios/Runner/: Info.plist
src/apps/flutter/ios/Runner.xcodeproj/: project.pbxproj
src/apps/macos/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  main.mm
src/apps/macos/Assets.xcassets/AppIcon.appiconset/: Contents.json
src/apps/macos/Assets.xcassets/PopupMenu_BackgroundColor.colorset/: Contents.json
src/apps/macos/Assets.xcassets/PopupMenu_TitleColor.colorset/: Contents.json
src/apps/macos/Base.lproj/: Main.storyboard
src/apps/macos/Interop/: PointerHost.h  PointerHost.m
src/apps/macos/Pointer-macOS.xcodeproj/: project.pbxproj
src/apps/macos/Pointer-macOS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/apps/macos/Pointer-macOS.xcodeproj/project.xcworkspace/xcuserdata/ahmad.xcuserdatad/: UserInterfaceState.xcuserstate
src/apps/macos/Pointer-macOS.xcodeproj/xcshareddata/xcschemes/: Pointer-macOS.xcscheme
src/apps/macos/Pointer-macOS.xcodeproj/xcuserdata/ahmad.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
src/apps/macos/Pointer-macOS.xcodeproj/xcuserdata/ahmad.xcuserdatad/xcschemes/: xcschememanagement.plist
src/apps/macos/Utils/: HelperFunctions.swift
src/apps/macos/ViewControllers/: PopupMenuViewController.swift
src/apps/macos/Views/: PopupMenuView.swift  PopupMenuView.xib
src/apps/win32/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  ConnectivityTabPage.cpp  ConnectivityTabPage.h  MainWindow.cpp  MainWindow.h  PointerApp.cpp  PointerApp.h  ScreenSaver.c  SettingsDialog.cpp  SettingsDialog.h  main.cpp  w.save
src/apps/win32/_unused/: ControlPanelWindow.cpp  ControlPanelWindow.h  DebugTabPage.cpp  DebugTabPage.h  GeneralTabPage.cpp  GeneralTabPage.h  TaskManagerDialog.cpp  TaskManagerDialog.h
src/apps/win32/gui/: CMakeLists.txt  IContainer.h  IControl.h  IResizableControl.h  IWin32Object.h  IWin32_Button.cpp  IWin32_Button.h  IWin32_CheckBox.cpp  IWin32_CheckBox.h  IWin32_ComboBox.cpp  IWin32_ComboBox.h  IWin32_ExceptionDialogBox.cpp  IWin32_ExceptionDialogBox.h  IWin32_Flyout.cpp  IWin32_Flyout.h  IWin32_GroupBox.cpp  IWin32_GroupBox.h  IWin32_Label.cpp  IWin32_Label.h  IWin32_ListView.cpp  IWin32_ListView.h  IWin32_ListViewItem.cpp  IWin32_ListViewItem.h  IWin32_NotifyIcon.cpp  IWin32_NotifyIcon.h  IWin32_PictureBox.cpp  IWin32_PictureBox.h  IWin32_TabControl.cpp  IWin32_TabControl.h  IWin32_TabPage.cpp  IWin32_TabPage.h  IWin32_WinMain.cpp  IWin32_WinMain.h  IWin32_Window.cpp  IWin32_Window.h
src/apps/win32/gui/misc/: framework.h
src/apps/win32/misc/: pointer.rc  resource.h
src/lib/: CMakeLists.txt
src/lib/common/: CMakeLists.txt  macros.h  ptbool.h
src/lib/net/: CMakeLists.txt  filetrans.h  netpal.h  socket.c  socket.h  socket_errno.h  tcp_client.c  tcp_client.h  tcp_listener.c  tcp_listener.h
src/lib/net/unix/: netpal_unix.c  netpal_unix.h
src/lib/net/win32/: netpal_winsock.c  netpal_winsock.h
src/lib/pointer/: CMakeLists.txt  pointer_export.h  ptclient.c  ptclient.h  ptserver.c  ptserver.h
